--- a/codesnippetdialog.ui
+++ b/codesnippetdialog.ui
@@ -37,6 +37,32 @@
     </widget>
    </item>
    <item>
+    <widget class="QGroupBox" name="boxClipboardMessage">
+     <property name="title">
+      <string/>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1">
+      <item>
+       <widget class="QLabel" name="successIcon">
+        <property name="text">
+         <string>PLACEHOLDER</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Copied to system clipboard.</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
