--- a/codesnippetdialog.ui
+++ b/codesnippetdialog.ui
@@ -45,7 +45,7 @@
       <item>
        <widget class="QLabel" name="successIcon">
         <property name="text">
-         <string>PLACEHOLDER</string>
+         <string/>
         </property>
        </widget>
       </item>
