--- a/customranges.ui
+++ b/customranges.ui
@@ -60,6 +60,9 @@
      </item>
      <item>
       <widget class="QGroupBox" name="boxRangeEditor">
+       <property name="whatsThis">
+        <string>The average shade of the image's recolored portions.</string>
+       </property>
        <property name="title">
         <string/>
        </property>
@@ -69,6 +72,9 @@
         </property>
         <item row="0" column="0">
          <widget class="QLabel" name="label_3">
+          <property name="whatsThis">
+           <string>The average shade of an image's recolored portions.</string>
+          </property>
           <property name="text">
            <string>A&amp;verage:</string>
           </property>
@@ -81,6 +87,9 @@
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <widget class="QLineEdit" name="leAvg">
+            <property name="whatsThis">
+             <string>The average shade of an image's recolored portions.</string>
+            </property>
             <property name="text">
              <string>#888888</string>
             </property>
@@ -88,6 +97,9 @@
           </item>
           <item>
            <widget class="QToolButton" name="tbAvg">
+            <property name="whatsThis">
+             <string>The average shade of an image's recolored portions.</string>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -97,6 +109,9 @@
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_4">
+          <property name="whatsThis">
+           <string>The maximum highlight shade of an image's recolored portions.</string>
+          </property>
           <property name="text">
            <string>&amp;Highlight:</string>
           </property>
@@ -109,6 +124,9 @@
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="QLineEdit" name="leMax">
+            <property name="whatsThis">
+             <string>The maximum highlight shade of an image's recolored portions.</string>
+            </property>
             <property name="text">
              <string>#ffffff</string>
             </property>
@@ -116,6 +134,9 @@
           </item>
           <item>
            <widget class="QToolButton" name="tbMax">
+            <property name="whatsThis">
+             <string>The maximum highlight shade of an image's recolored portions.</string>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -125,6 +146,9 @@
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_5">
+          <property name="whatsThis">
+           <string>The minimum shadow shade of an image's recolored portions.</string>
+          </property>
           <property name="text">
            <string>&amp;Shadow:</string>
           </property>
@@ -137,6 +161,9 @@
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
            <widget class="QLineEdit" name="leMin">
+            <property name="whatsThis">
+             <string>The minimum shadow shade of an image's recolored portions.</string>
+            </property>
             <property name="text">
              <string>#000000</string>
             </property>
@@ -144,6 +171,9 @@
           </item>
           <item>
            <widget class="QToolButton" name="tbMin">
+            <property name="whatsThis">
+             <string>The minimum shadow shade of an image's recolored portions.</string>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -181,6 +211,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="cmdWml">
+            <property name="whatsThis">
+             <string>Generates a sample Wesnoth Markup Language snippet containing a single color range definition, which you can save to a file or clipboard for later inclusion in your own project.</string>
+            </property>
             <property name="text">
              <string>Generate &amp;WML</string>
             </property>
