--- a/src/custompalettes.ui
+++ b/src/custompalettes.ui
@@ -13,10 +13,6 @@
   <property name="windowTitle">
    <string>Palette Editor</string>
   </property>
-  <property name="windowIcon">
-   <iconset resource="../morningstar.qrc">
-    <normaloff>:/rsrc/rcx-icon.png</normaloff>:/rsrc/rcx-icon.png</iconset>
-  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3">
@@ -206,9 +202,7 @@
   <tabstop>cmdWml</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
- <resources>
-  <include location="../morningstar.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
