--- a/src/customranges.ui
+++ b/src/customranges.ui
@@ -32,25 +32,52 @@
         <widget class="QListWidget" name="listRanges"/>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,1">
+        <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
          <item>
-          <widget class="QPushButton" name="cmdAdd">
+          <widget class="QToolButton" name="cmdAdd">
            <property name="text">
             <string>&amp;Add</string>
            </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="cmdRename">
-           <property name="text">
-            <string>&amp;Rename</string>
+           <property name="icon">
+            <iconset theme="list-add"/>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonTextBesideIcon</enum>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="cmdDelete">
+          <widget class="QToolButton" name="cmdDelete">
            <property name="text">
             <string>&amp;Delete</string>
+           </property>
+           <property name="icon">
+            <iconset theme="list-remove"/>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonTextBesideIcon</enum>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="tbMoreOptions">
+           <property name="text">
+            <string>&amp;More</string>
+           </property>
+           <property name="popupMode">
+            <enum>QToolButton::InstantPopup</enum>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonTextBesideIcon</enum>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -237,11 +264,26 @@
     </widget>
    </item>
   </layout>
+  <action name="action_Rename">
+   <property name="icon">
+    <iconset theme="edit-rename"/>
+   </property>
+   <property name="text">
+    <string>&amp;Rename</string>
+   </property>
+  </action>
+  <action name="action_Duplicate">
+   <property name="icon">
+    <iconset theme="edit-copy"/>
+   </property>
+   <property name="text">
+    <string>&amp;Duplicate</string>
+   </property>
+  </action>
  </widget>
  <tabstops>
   <tabstop>listRanges</tabstop>
   <tabstop>cmdAdd</tabstop>
-  <tabstop>cmdRename</tabstop>
   <tabstop>cmdDelete</tabstop>
   <tabstop>leAvg</tabstop>
   <tabstop>tbAvg</tabstop>
